--- a/backend/interface/ch.ini
+++ b/backend/interface/ch.ini
@@ -103,6 +103,7 @@ RecSubLang = 识别语言
 RecMode = 识别模式
 IllegalPathWarning = 【警告】程序运行中断！路径不合法！请不要将程序放入带有空格和中文的路径下！！！请修改程序路径名后重新运行程序
 IllegalLanguageCode = 【警告】识别语言不存在，使用自动检测！
+LanguageDetected =【提示】检测到语言：
 StartGenerateSub = 【处理中】开始生成字幕，此步骤可能花费较长时间，请耐心等待...
 FinishGenerateSub = 【结束】字幕文件生成成功
 Elapse = 耗时
