--- a/backend/interface/en.ini
+++ b/backend/interface/en.ini
@@ -101,7 +101,8 @@ OpenVideoFirst = Please open video/audio file first
 RecSubLang = language
 RecMode = mode
 IllegalPathWarning = 【Warning】illegal file path
-IllegalLanguageCode = Language code not support, use auto detection
+IllegalLanguageCode = 【Warning】Language code not support, use auto detection
+LanguageDetected = 【Info】Language Detected：
 StartGenerateSub = 【Processing】start to generator subs please wait for a moment...
 FinishGenerateSub = 【Finished】subtitle file generated successfully
 Elapse = elapse
