--- a/backend/interface/chinese_cht.ini
+++ b/backend/interface/chinese_cht.ini
@@ -103,6 +103,7 @@ RecSubLang = 識別語言
 RecMode = 識別模式
 IllegalPathWarning = 【警告】程序運行中斷！路徑不合法！請不要將程序放入帶有空格和中文的路徑下！！！請修改程序路徑名後重新運行程序
 IllegalLanguageCode = 【警告】識別語言不存在，使用自動檢測！
+LanguageDetected =【提示】檢測到語言：
 StartGenerateSub = 【處理中】開始生成字幕，此步驟可能花費較長時間，請耐心等待...
 FinishGenerateSub = 【結束】字幕文件生成成功
 Elapse = 耗時
